2006-01-10 Paul Jakma <paul.jakma@sun.com>

	* ospfd.c: (ospf_network_run) checking to see if router-id
	  is set should be on ospf->router_id, not router_id_static.
	  This was causing ospfd to not start if router-id had not
	  been configured statically.
	  (ospf_if_update) ditto.
	* ospf_vty.c: (config_write_ospf_distribute) trim down
	  redundant strings.

2005-11-26 Paul Jakma <paul.jakma@sun.com>

	* ospf_api.c: (struct opaque_lsa) change from gcc zero-length
	  array to C99 incomplete type array.
	* (general) s/graceful/deferred/ in all files, the former term 
	   is confusing wrt OSPF Graceful-Restart.
	* ospfd.c: (ospf_deferred_shutdown_check) dont return
	  a function which returns void. SOS complains about this.
	  (ospf_finish)

2005-11-20 Paul Jakma <paul.jakma@sun.com>

        * ospfd.h: remove the OSPF_ROUTER_ID_UPDATE_DELAY define
          (struct ospf) remove the router_id timer thread.
          remove export of ospf_router_id_update_timer.   
        * ospfd.c: (ospf_router_id_update) call ospf_if_update to
          poke interfaces into action after ID has been configured.
          (ospf_router_id_update_timer) removed.
          (ospf_finish_final) t_router_id_update timer is gone.
          (ospf_network_run) router-id update timer gone.
          call ospf_router_id_update directly if ID not configured.
          In the per-iface loop, don't ospf_if_up interfaces if
          ID is still not configured. The update function will call
          ospf_if_update anyway.
          (ospf_if_update) ID update timer is gone. Just return if no
          ID is set.
        * ospf_vty.c: (ospf_router_id) call ospf_router_id_update, no
          timer needed.
        * ospf_zebra.c: (ospf_router_id_update_zebra) call
          ospf_router_id_update directly, not via timer.  
        * ospf_abr.c: (ospf_abr_announce_network_to_area) check
          returned LSA of ospf_summary_lsa_refresh and print warning if
          it failed.